force-app/main/default/objects/Timesheet_Equipment_Entry__c/Timesheet_Equipment_Entry__c.object-meta.xml
<CustomObject>
    <label>Timesheet Equipment Entry</label>
    <nameField>
        <label>Timesheet Equipment Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheets Equipment Entry</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>