force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/Area_Serv_Terr__c.field-meta.xml
<CustomField>
    <fullName>Area_Serv_Terr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Territory(This field was created for NPL MA).</description>
    <label>Area Serv Terr</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Timesheets Equipment Entry</relationshipLabel>
    <relationshipName>Timesheets_Equipment_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>