force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The asset Number(This field was created for NPL MA).</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Timesheets Equipment Entry</relationshipLabel>
    <relationshipName>Timesheets_Equipment_Entry</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>