force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/AssetDel__c.field-meta.xml
<CustomField>
    <fullName>AssetDel__c</fullName>
    <label>AssetDel</label>
    <length>64</length>
    <type>Text</type>
</CustomField>