force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/AssetDescription__c.field-meta.xml
<CustomField>
    <fullName>AssetDescription__c</fullName>
    <description>The asset&apos;s description(This field was created for NPL MA).</description>
    <label>AssetDescription</label>
    <type>TextArea</type>
</CustomField>