force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <description>The compnay code(This field was created for NPL MA).</description>
    <label>Company Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>