force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/CustRefDate__c.field-meta.xml
<CustomField>
    <fullName>CustRefDate__c</fullName>
    <description>The Work Date(This field was created for NPL MA).</description>
    <label>Cust Ref Date</label>
    <type>Date</type>
</CustomField>