force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/Default_LockoutDateTime__c.field-meta.xml
<CustomField>
    <fullName>Default_LockoutDateTime__c</fullName>
    <description>The date represents the default lock out date(Tuesday 9 AM Arizona time.)(This field was created for NPL MA).</description>
    <formula>IF ( !ISBLANK(Timesheet__r.LockoutDateTime__c ), Timesheet__r.LockoutDateTime__c , Timesheet__r.Default_LockoutDate_Time__c
)</formula>
    <label>Default LockoutDate/Time</label>
    <type>DateTime</type>
</CustomField>