force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/LockoutDate__c.field-meta.xml
<CustomField>
    <fullName>LockoutDate__c</fullName>
    <description>The date represents the lock out date from LockTime object(This field was created for NPL MA).</description>
    <label>LockoutDate</label>
    <type>DateTime</type>
</CustomField>