force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/ProfitCenter__c.field-meta.xml
<CustomField>
    <fullName>ProfitCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Profit Centre(This field was created for NPL MA).</description>
    <label>Profit Center</label>
    <referenceTo>Profit_Center__c</referenceTo>
    <relationshipLabel>Timesheets Equipment Entry</relationshipLabel>
    <relationshipName>Timesheets_Equipment_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>