force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/RentalHours__c.field-meta.xml
<CustomField>
    <fullName>RentalHours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Hours(This field was created for NPL MA).</description>
    <label>RentalHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>