force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/SalesDocument__c.field-meta.xml
<CustomField>
    <fullName>SalesDocument__c</fullName>
    <description>The sales document (send empty if new)(This field was created for NPL MA).</description>
    <label>SalesDocument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>