force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/SequenceNo__c.field-meta.xml
<CustomField>
    <fullName>SequenceNo__c</fullName>
    <description>The sequence Number (send empty if new)(This field was created for NPL MA).</description>
    <label>Sequence No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>