force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <description>Lookup To parent Centuri Timesheet(This field was created for NPL MA).</description>
    <label>Timesheet</label>
    <referenceTo>Diab_Timesheet__c</referenceTo>
    <relationshipLabel>Timesheets Equipment Entry</relationshipLabel>
    <relationshipName>Timesheets_Equipment_Entry</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>