force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/WBSElement__c.field-meta.xml
<CustomField>
    <fullName>WBSElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The WBS Number(This field was created for NPL MA).</description>
    <label>WBSElement</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Timesheets Equipment Entry</relationshipLabel>
    <relationshipName>Timesheets_Equipment_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>