force-app/main/default/objects/Timesheet_Equipment_Entry__c/fields/WorkDate__c.field-meta.xml
<CustomField>
    <fullName>WorkDate__c</fullName>
    <description>The Work Date(This field was created for NPL MA).</description>
    <label>WorkDate</label>
    <type>Date</type>
</CustomField>