force-app/main/default/objects/Timesheet_Equipment_Entry__c/validationRules/Check_Asset_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Asset_Details</fullName>
    <active>false</active>
    <description>Asset Details are required</description>
    <errorConditionFormula>ISBLANK(Asset__c)</errorConditionFormula>
    <errorMessage>Asset Details are required</errorMessage>
</ValidationRule>