force-app/main/default/objects/Timesheet_Equipment_Entry__c/validationRules/Check_WBS_Element_and_CostCenter.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_WBS_Element_and_CostCenter</fullName>
    <active>true</active>
    <description>Timesheet Equipment Entry should have either WBS or Cost Center.</description>
    <errorConditionFormula>NOT(OR (AND (!ISBLANK(WBSElement__c), ISBLANK(CostCenter__c )),
					AND (ISBLANK(WBSElement__c), !ISBLANK(CostCenter__c ))))</errorConditionFormula>
    <errorMessage>Timesheet Equipment Entry should have either WBS or Cost Center.</errorMessage>
</ValidationRule>