force-app/main/default/objects/Timesheet_Equipment_Entry__c/validationRules/Check_WorkDate_Or_CusRefDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_WorkDate_Or_CusRefDate</fullName>
    <active>false</active>
    <description>Work Date / Cust Ref Date is required</description>
    <errorConditionFormula>ISBLANK(WorkDate__c)</errorConditionFormula>
    <errorMessage>Work Date / Cust Ref Date is required</errorMessage>
</ValidationRule>