force-app/main/default/objects/Timesheet_Equipment_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CompanyCode__c</columns>
    <columns>ProfitCenter__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RentalHours__c</columns>
    <columns>Asset__c</columns>
    <columns>WBSElement__c</columns>
    <columns>Timesheet__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LockoutDate__c</columns>
    <columns>Default_LockoutDateTime__c</columns>
    <columns>Diab_IsLocked_Adjuster_Approver__c</columns>
    <columns>WorkDate__c</columns>
    <columns>SequenceNo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>